--- a/src/components/pages/PaginaPrincipal/PaginaPrincipal.css
+++ b/src/components/pages/PaginaPrincipal/PaginaPrincipal.css
@@ -1,3 +1,28 @@
-.fundo-azul{
-    background-color: blue;
+.cabecalho{
+    display: flex;
+    align-items: center;
+    padding: 7px;
+    background-color: blueviolet;
+}
+.cabecalho .pagina-atual{
+    margin-left: auto;
+}
+.conteudo-galeria {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-evenly;
+}
+.card {
+    display: flex;
+    margin: 20px;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    background-color: chartreuse;
+    width: 200px;
+    height: 150px;
+
+}
+.card .card-titulo{
+    font-size: 30px;
 }
