--- a/src/components/common/Navegador/Navegador.css
+++ b/src/components/common/Navegador/Navegador.css
@@ -1,13 +1,42 @@
 .navegador{
     background-color: cornflowerblue;
+    width: 700px;
+    height: 100px;
+
+    display: flex; 
+    align-items: center;
+
+    position: relative;
+    
+}
+.navegador .imagem{
+    width: 100px;
+    height: 100px;
+}
+.navegador .linhadotempo{
+    background-color: burlywood; 
+    width: 200px;
+    height: 50px;
+    
     display: flex;
-}
-.navegador .link-navegador{
-    display: block;
-    padding: 8px;
-    color: black;
+    align-items: center;
+    justify-content: center; 
+
+    position: absolute;
+    right: 100px;
+
     text-decoration: none;
+      
 }
-.navegador .link-navegador:hover{
-    background-color: cyan;
+.navegador .postar{
+    background-color: crimson;
+    width: 100px;
+    height: 50px;
+
+    display: flex;
+    align-items: center;
+    justify-content: center; 
+    
+    position: absolute;
+    right: 0px;
 }
