--- a/src/components/common/Navegador/Navegador.css
+++ b/src/components/common/Navegador/Navegador.css
@@ -23,7 +23,7 @@
     justify-content: center; 
 
     position: absolute;
-    right: 100px;
+    right: 200px;
 
     text-decoration: none;
       
@@ -37,6 +37,20 @@
     align-items: center;
     justify-content: center; 
     
+    position: absolute;
+    right: 100px;
+}
+.navegador .logado{
+    background-color: yellowgreen;
+    width: 100px;
+    height: 50px;
+    
+    display: flex;
+    align-items: center;
+    justify-content: center; 
+    
+    text-align: center;
+
     position: absolute;
     right: 0px;
 }
