--- a/src/components/common/Navegador/Navegador.css
+++ b/src/components/common/Navegador/Navegador.css
@@ -9,6 +9,13 @@
     position: relative;
     
 }
+
+.navegador .linhadotempo.active{
+    background-color: black;
+}
+.navegador .postar.active{
+    background-color: black;
+}
 .navegador .imagem{
     width: 100px;
     height: 100px;
