--- a/src/components/pages/PaginaPrincipal/PaginaFeed.css
+++ b/src/components/pages/PaginaPrincipal/PaginaFeed.css
@@ -78,5 +78,11 @@
 
     position: absolute;
     right: 0;
-    
+
+}
+
+.container .comentario .form .objetos{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
 }
