--- a/src/components/common/Navegador/Navegador.css
+++ b/src/components/common/Navegador/Navegador.css
@@ -1,20 +1,20 @@
 .navegador{
-    background-color: cornflowerblue;
+    background-color: rgb(0, 172, 236);
     width: 700px;
     height: 100px;
-
     display: flex; 
     align-items: center;
-
     position: relative;
-    
 }
-
+.navegador .logout{
+    background-color: blue;
+    cursor: pointer;
+}
 .navegador .linhadotempo.active{
-    background-color: black;
+    background-color: rgb(255, 0, 0);
 }
 .navegador .postar.active{
-    background-color: black;
+    background-color: rgb(255, 0, 0);
 }
 .navegador .imagem{
     width: 100px;
@@ -24,40 +24,66 @@
     background-color: burlywood; 
     width: 200px;
     height: 50px;
-    
     display: flex;
     align-items: center;
     justify-content: center; 
-
+    text-decoration: none;
     position: absolute;
     right: 200px;
-
-    text-decoration: none;
-      
+    text-decoration: none; 
 }
 .navegador .postar{
-    background-color: crimson;
+    background-color: burlywood;
     width: 100px;
     height: 50px;
-
+    text-decoration: none;
     display: flex;
     align-items: center;
     justify-content: center; 
-    
     position: absolute;
     right: 100px;
+}
+.navegador .naologado{
+    display: flex;
+    align-items: center;
+    justify-content: center; 
+}
+.navegador .naologado .cadastrar{ 
+    background-color: rgb(206, 206, 206);
+    width: 100px;
+    height: 50px;
+    text-decoration: none;
+    display: flex;
+    align-items: center;
+    justify-content: center; 
+    position: absolute;
+    right: 10px;
+}
+.navegador .naologado .cadastrar.active{
+    background-color: aqua;
+}
+.navegador .naologado .login.active{
+    background-color: aqua;
+}
+.navegador .naologado .login{
+    background-color: rgb(206, 206, 206);
+    width: 100px;
+    height: 50px;
+    text-decoration: none;
+    display: flex;
+    align-items: center;
+    justify-content: center; 
+    position: absolute;
+    right: 110px;
 }
 .navegador .logado{
     background-color: yellowgreen;
     width: 100px;
     height: 50px;
-    
     display: flex;
     align-items: center;
     justify-content: center; 
-    
     text-align: center;
-
     position: absolute;
     right: 0px;
 }
